[gd_scene load_steps=6 format=3 uid="uid://b7y1r4hqpiab5"]

[ext_resource type="Script" path="res://main.gd" id="1_1uxqu"]
[ext_resource type="Shader" path="res://recolorize.gdshader" id="2_0oguu"]
[ext_resource type="PackedScene" uid="uid://cw7aasjiododn" path="res://ColorPair/color_pair.tscn" id="4_jki75"]

[sub_resource type="ViewportTexture" id="ViewportTexture_d02yq"]
viewport_path = NodePath("SubViewport")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_jgx0j"]
shader = ExtResource("2_0oguu")
shader_parameter/activated = true
shader_parameter/show_untouched = false
shader_parameter/epsilon = 0.0064
shader_parameter/s0 = Color(0, 0, 0, 0)
shader_parameter/s1 = Color(0, 0, 0, 0)
shader_parameter/s2 = Color(0, 0, 0, 0)
shader_parameter/s3 = Color(0, 0, 0, 0)
shader_parameter/s4 = Color(0, 0, 0, 0)
shader_parameter/s5 = Color(0, 0, 0, 0)
shader_parameter/s6 = Color(0, 0, 0, 0)
shader_parameter/s7 = Color(0, 0, 0, 0)
shader_parameter/s8 = Color(0, 0, 0, 0)
shader_parameter/s9 = Color(0, 0, 0, 0)
shader_parameter/s10 = Color(0, 0, 0, 0)
shader_parameter/s11 = Color(0, 0, 0, 0)
shader_parameter/s12 = Color(0, 0, 0, 0)
shader_parameter/s13 = Color(0, 0, 0, 0)
shader_parameter/s14 = Color(0, 0, 0, 0)
shader_parameter/s15 = Color(0, 0, 0, 0)
shader_parameter/s16 = Color(0, 0, 0, 0)
shader_parameter/s17 = Color(0, 0, 0, 0)
shader_parameter/s18 = Color(0, 0, 0, 0)
shader_parameter/s19 = Color(0, 0, 0, 0)
shader_parameter/s20 = Color(0, 0, 0, 0)
shader_parameter/s21 = Color(0, 0, 0, 0)
shader_parameter/s22 = Color(0, 0, 0, 0)
shader_parameter/s23 = Color(0, 0, 0, 0)
shader_parameter/s24 = Color(0, 0, 0, 0)
shader_parameter/s25 = Color(0, 0, 0, 0)
shader_parameter/s26 = Color(0, 0, 0, 0)
shader_parameter/s27 = Color(0, 0, 0, 0)
shader_parameter/s28 = Color(0, 0, 0, 0)
shader_parameter/s29 = Color(0, 0, 0, 0)
shader_parameter/s30 = Color(0, 0, 0, 0)
shader_parameter/s31 = Color(0, 0, 0, 0)
shader_parameter/s32 = Color(0, 0, 0, 0)
shader_parameter/s33 = Color(0, 0, 0, 0)
shader_parameter/s34 = Color(0, 0, 0, 0)
shader_parameter/s35 = Color(0, 0, 0, 0)
shader_parameter/s36 = Color(0, 0, 0, 0)
shader_parameter/s37 = Color(0, 0, 0, 0)
shader_parameter/s38 = Color(0, 0, 0, 0)
shader_parameter/s39 = Color(0, 0, 0, 0)
shader_parameter/s40 = Color(0, 0, 0, 0)
shader_parameter/s41 = Color(0, 0, 0, 0)
shader_parameter/s42 = Color(0, 0, 0, 0)
shader_parameter/s43 = Color(0, 0, 0, 0)
shader_parameter/s44 = Color(0, 0, 0, 0)
shader_parameter/s45 = Color(0, 0, 0, 0)
shader_parameter/s46 = Color(0, 0, 0, 0)
shader_parameter/s47 = Color(0, 0, 0, 0)
shader_parameter/s48 = Color(0, 0, 0, 0)
shader_parameter/s49 = Color(0, 0, 0, 0)
shader_parameter/s50 = Color(0, 0, 0, 0)
shader_parameter/s51 = Color(0, 0, 0, 0)
shader_parameter/s52 = Color(0, 0, 0, 0)
shader_parameter/s53 = Color(0, 0, 0, 0)
shader_parameter/s54 = Color(0, 0, 0, 0)
shader_parameter/s55 = Color(0, 0, 0, 0)
shader_parameter/s56 = Color(0, 0, 0, 0)
shader_parameter/s57 = Color(0, 0, 0, 0)
shader_parameter/s58 = Color(0, 0, 0, 0)
shader_parameter/s59 = Color(0, 0, 0, 0)
shader_parameter/s60 = Color(0, 0, 0, 0)
shader_parameter/s61 = Color(0, 0, 0, 0)
shader_parameter/s62 = Color(0, 0, 0, 0)
shader_parameter/s63 = Color(0, 0, 0, 0)
shader_parameter/s64 = Color(0, 0, 0, 0)
shader_parameter/s65 = Color(0, 0, 0, 0)
shader_parameter/s66 = Color(0, 0, 0, 0)
shader_parameter/s67 = Color(0, 0, 0, 0)
shader_parameter/s68 = Color(0, 0, 0, 0)
shader_parameter/s69 = Color(0, 0, 0, 0)
shader_parameter/s70 = Color(0, 0, 0, 0)
shader_parameter/s71 = Color(0, 0, 0, 0)
shader_parameter/s72 = Color(0, 0, 0, 0)
shader_parameter/s73 = Color(0, 0, 0, 0)
shader_parameter/s74 = Color(0, 0, 0, 0)
shader_parameter/s75 = Color(0, 0, 0, 0)
shader_parameter/s76 = Color(0, 0, 0, 0)
shader_parameter/s77 = Color(0, 0, 0, 0)
shader_parameter/s78 = Color(0, 0, 0, 0)
shader_parameter/s79 = Color(0, 0, 0, 0)
shader_parameter/s80 = Color(0, 0, 0, 0)
shader_parameter/s81 = Color(0, 0, 0, 0)
shader_parameter/s82 = Color(0, 0, 0, 0)
shader_parameter/s83 = Color(0, 0, 0, 0)
shader_parameter/s84 = Color(0, 0, 0, 0)
shader_parameter/s85 = Color(0, 0, 0, 0)
shader_parameter/s86 = Color(0, 0, 0, 0)
shader_parameter/s87 = Color(0, 0, 0, 0)
shader_parameter/s88 = Color(0, 0, 0, 0)
shader_parameter/s89 = Color(0, 0, 0, 0)
shader_parameter/s90 = Color(0, 0, 0, 0)
shader_parameter/s91 = Color(0, 0, 0, 0)
shader_parameter/s92 = Color(0, 0, 0, 0)
shader_parameter/s93 = Color(0, 0, 0, 0)
shader_parameter/s94 = Color(0, 0, 0, 0)
shader_parameter/s95 = Color(0, 0, 0, 0)
shader_parameter/s96 = Color(0, 0, 0, 0)
shader_parameter/s97 = Color(0, 0, 0, 0)
shader_parameter/s98 = Color(0, 0, 0, 0)
shader_parameter/s99 = Color(0, 0, 0, 0)
shader_parameter/s100 = Color(0, 0, 0, 0)
shader_parameter/s101 = Color(0, 0, 0, 0)
shader_parameter/s102 = Color(0, 0, 0, 0)
shader_parameter/s103 = Color(0, 0, 0, 0)
shader_parameter/s104 = Color(0, 0, 0, 0)
shader_parameter/s105 = Color(0, 0, 0, 0)
shader_parameter/s106 = Color(0, 0, 0, 0)
shader_parameter/s107 = Color(0, 0, 0, 0)
shader_parameter/s108 = Color(0, 0, 0, 0)
shader_parameter/s109 = Color(0, 0, 0, 0)
shader_parameter/s110 = Color(0, 0, 0, 0)
shader_parameter/s111 = Color(0, 0, 0, 0)
shader_parameter/s112 = Color(0, 0, 0, 0)
shader_parameter/s113 = Color(0, 0, 0, 0)
shader_parameter/s114 = Color(0, 0, 0, 0)
shader_parameter/s115 = Color(0, 0, 0, 0)
shader_parameter/s116 = Color(0, 0, 0, 0)
shader_parameter/s117 = Color(0, 0, 0, 0)
shader_parameter/s118 = Color(0, 0, 0, 0)
shader_parameter/s119 = Color(0, 0, 0, 0)
shader_parameter/s120 = Color(0, 0, 0, 0)
shader_parameter/s121 = Color(0, 0, 0, 0)
shader_parameter/s122 = Color(0, 0, 0, 0)
shader_parameter/s123 = Color(0, 0, 0, 0)
shader_parameter/s124 = Color(0, 0, 0, 0)
shader_parameter/s125 = Color(0, 0, 0, 0)
shader_parameter/s126 = Color(0, 0, 0, 0)
shader_parameter/s127 = Color(0, 0, 0, 0)
shader_parameter/s128 = Color(0, 0, 0, 0)
shader_parameter/s129 = Color(0, 0, 0, 0)
shader_parameter/s130 = Color(0, 0, 0, 0)
shader_parameter/s131 = Color(0, 0, 0, 0)
shader_parameter/s132 = Color(0, 0, 0, 0)
shader_parameter/s133 = Color(0, 0, 0, 0)
shader_parameter/s134 = Color(0, 0, 0, 0)
shader_parameter/s135 = Color(0, 0, 0, 0)
shader_parameter/s136 = Color(0, 0, 0, 0)
shader_parameter/s137 = Color(0, 0, 0, 0)
shader_parameter/s138 = Color(0, 0, 0, 0)
shader_parameter/s139 = Color(0, 0, 0, 0)
shader_parameter/s140 = Color(0, 0, 0, 0)
shader_parameter/s141 = Color(0, 0, 0, 0)
shader_parameter/s142 = Color(0, 0, 0, 0)
shader_parameter/s143 = Color(0, 0, 0, 0)
shader_parameter/s144 = Color(0, 0, 0, 0)
shader_parameter/s145 = Color(0, 0, 0, 0)
shader_parameter/s146 = Color(0, 0, 0, 0)
shader_parameter/s147 = Color(0, 0, 0, 0)
shader_parameter/s148 = Color(0, 0, 0, 0)
shader_parameter/s149 = Color(0, 0, 0, 0)
shader_parameter/s150 = Color(0, 0, 0, 0)
shader_parameter/s151 = Color(0, 0, 0, 0)
shader_parameter/s152 = Color(0, 0, 0, 0)
shader_parameter/s153 = Color(0, 0, 0, 0)
shader_parameter/s154 = Color(0, 0, 0, 0)
shader_parameter/s155 = Color(0, 0, 0, 0)
shader_parameter/s156 = Color(0, 0, 0, 0)
shader_parameter/s157 = Color(0, 0, 0, 0)
shader_parameter/s158 = Color(0, 0, 0, 0)
shader_parameter/s159 = Color(0, 0, 0, 0)
shader_parameter/s160 = Color(0, 0, 0, 0)
shader_parameter/s161 = Color(0, 0, 0, 0)
shader_parameter/s162 = Color(0, 0, 0, 0)
shader_parameter/s163 = Color(0, 0, 0, 0)
shader_parameter/s164 = Color(0, 0, 0, 0)
shader_parameter/s165 = Color(0, 0, 0, 0)
shader_parameter/s166 = Color(0, 0, 0, 0)
shader_parameter/s167 = Color(0, 0, 0, 0)
shader_parameter/s168 = Color(0, 0, 0, 0)
shader_parameter/s169 = Color(0, 0, 0, 0)
shader_parameter/s170 = Color(0, 0, 0, 0)
shader_parameter/s171 = Color(0, 0, 0, 0)
shader_parameter/s172 = Color(0, 0, 0, 0)
shader_parameter/s173 = Color(0, 0, 0, 0)
shader_parameter/s174 = Color(0, 0, 0, 0)
shader_parameter/s175 = Color(0, 0, 0, 0)
shader_parameter/s176 = Color(0, 0, 0, 0)
shader_parameter/s177 = Color(0, 0, 0, 0)
shader_parameter/s178 = Color(0, 0, 0, 0)
shader_parameter/s179 = Color(0, 0, 0, 0)
shader_parameter/s180 = Color(0, 0, 0, 0)
shader_parameter/s181 = Color(0, 0, 0, 0)
shader_parameter/s182 = Color(0, 0, 0, 0)
shader_parameter/s183 = Color(0, 0, 0, 0)
shader_parameter/s184 = Color(0, 0, 0, 0)
shader_parameter/s185 = Color(0, 0, 0, 0)
shader_parameter/s186 = Color(0, 0, 0, 0)
shader_parameter/s187 = Color(0, 0, 0, 0)
shader_parameter/s188 = Color(0, 0, 0, 0)
shader_parameter/s189 = Color(0, 0, 0, 0)
shader_parameter/s190 = Color(0, 0, 0, 0)
shader_parameter/s191 = Color(0, 0, 0, 0)
shader_parameter/s192 = Color(0, 0, 0, 0)
shader_parameter/s193 = Color(0, 0, 0, 0)
shader_parameter/s194 = Color(0, 0, 0, 0)
shader_parameter/s195 = Color(0, 0, 0, 0)
shader_parameter/s196 = Color(0, 0, 0, 0)
shader_parameter/s197 = Color(0, 0, 0, 0)
shader_parameter/s198 = Color(0, 0, 0, 0)
shader_parameter/s199 = Color(0, 0, 0, 0)
shader_parameter/s200 = Color(0, 0, 0, 0)
shader_parameter/s201 = Color(0, 0, 0, 0)
shader_parameter/s202 = Color(0, 0, 0, 0)
shader_parameter/s203 = Color(0, 0, 0, 0)
shader_parameter/s204 = Color(0, 0, 0, 0)
shader_parameter/s205 = Color(0, 0, 0, 0)
shader_parameter/s206 = Color(0, 0, 0, 0)
shader_parameter/s207 = Color(0, 0, 0, 0)
shader_parameter/s208 = Color(0, 0, 0, 0)
shader_parameter/s209 = Color(0, 0, 0, 0)
shader_parameter/s210 = Color(0, 0, 0, 0)
shader_parameter/s211 = Color(0, 0, 0, 0)
shader_parameter/s212 = Color(0, 0, 0, 0)
shader_parameter/s213 = Color(0, 0, 0, 0)
shader_parameter/s214 = Color(0, 0, 0, 0)
shader_parameter/s215 = Color(0, 0, 0, 0)
shader_parameter/s216 = Color(0, 0, 0, 0)
shader_parameter/s217 = Color(0, 0, 0, 0)
shader_parameter/s218 = Color(0, 0, 0, 0)
shader_parameter/s219 = Color(0, 0, 0, 0)
shader_parameter/s220 = Color(0, 0, 0, 0)
shader_parameter/s221 = Color(0, 0, 0, 0)
shader_parameter/s222 = Color(0, 0, 0, 0)
shader_parameter/s223 = Color(0, 0, 0, 0)
shader_parameter/s224 = Color(0, 0, 0, 0)
shader_parameter/s225 = Color(0, 0, 0, 0)
shader_parameter/s226 = Color(0, 0, 0, 0)
shader_parameter/s227 = Color(0, 0, 0, 0)
shader_parameter/s228 = Color(0, 0, 0, 0)
shader_parameter/s229 = Color(0, 0, 0, 0)
shader_parameter/s230 = Color(0, 0, 0, 0)
shader_parameter/s231 = Color(0, 0, 0, 0)
shader_parameter/s232 = Color(0, 0, 0, 0)
shader_parameter/s233 = Color(0, 0, 0, 0)
shader_parameter/s234 = Color(0, 0, 0, 0)
shader_parameter/s235 = Color(0, 0, 0, 0)
shader_parameter/s236 = Color(0, 0, 0, 0)
shader_parameter/s237 = Color(0, 0, 0, 0)
shader_parameter/s238 = Color(0, 0, 0, 0)
shader_parameter/s239 = Color(0, 0, 0, 0)
shader_parameter/s240 = Color(0, 0, 0, 0)
shader_parameter/s241 = Color(0, 0, 0, 0)
shader_parameter/s242 = Color(0, 0, 0, 0)
shader_parameter/s243 = Color(0, 0, 0, 0)
shader_parameter/s244 = Color(0, 0, 0, 0)
shader_parameter/s245 = Color(0, 0, 0, 0)
shader_parameter/s246 = Color(0, 0, 0, 0)
shader_parameter/s247 = Color(0, 0, 0, 0)
shader_parameter/s248 = Color(0, 0, 0, 0)
shader_parameter/s249 = Color(0, 0, 0, 0)
shader_parameter/s250 = Color(0, 0, 0, 0)
shader_parameter/s251 = Color(0, 0, 0, 0)
shader_parameter/s252 = Color(0, 0, 0, 0)
shader_parameter/s253 = Color(0, 0, 0, 0)
shader_parameter/s254 = Color(0, 0, 0, 0)
shader_parameter/s255 = Color(0, 0, 0, 0)
shader_parameter/s256 = Color(0, 0, 0, 0)
shader_parameter/t0 = Color(0, 0, 0, 1)
shader_parameter/t1 = Color(0, 0, 0, 1)
shader_parameter/t2 = Color(0, 0, 0, 1)
shader_parameter/t3 = Color(0, 0, 0, 1)
shader_parameter/t4 = Color(0, 0, 0, 1)
shader_parameter/t5 = Color(0, 0, 0, 1)
shader_parameter/t6 = Color(0, 0, 0, 1)
shader_parameter/t7 = Color(0, 0, 0, 0)
shader_parameter/t8 = Color(0, 0, 0, 1)
shader_parameter/t9 = Color(0, 0, 0, 1)
shader_parameter/t10 = Color(0, 0, 0, 1)
shader_parameter/t11 = Color(0, 0, 0, 1)
shader_parameter/t12 = Color(0, 0, 0, 1)
shader_parameter/t13 = Color(0, 0, 0, 1)
shader_parameter/t14 = Color(0, 0, 0, 1)
shader_parameter/t15 = Color(0, 0, 0, 1)
shader_parameter/t16 = Color(0, 0, 0, 1)
shader_parameter/t17 = Color(0, 0, 0, 1)
shader_parameter/t18 = Color(0, 0, 0, 1)
shader_parameter/t19 = Color(0, 0, 0, 1)
shader_parameter/t20 = Color(0, 0, 0, 1)
shader_parameter/t21 = Color(0, 0, 0, 1)
shader_parameter/t22 = Color(0, 0, 0, 1)
shader_parameter/t23 = Color(0, 0, 0, 1)
shader_parameter/t24 = Color(0, 0, 0, 1)
shader_parameter/t25 = Color(0, 0, 0, 1)
shader_parameter/t26 = Color(0, 0, 0, 1)
shader_parameter/t27 = Color(0, 0, 0, 1)
shader_parameter/t28 = Color(0, 0, 0, 1)
shader_parameter/t29 = Color(0, 0, 0, 1)
shader_parameter/t30 = Color(0, 0, 0, 1)
shader_parameter/t31 = Color(0, 0, 0, 1)
shader_parameter/t32 = Color(0, 0, 0, 1)
shader_parameter/t33 = Color(0, 0, 0, 1)
shader_parameter/t34 = Color(0, 0, 0, 1)
shader_parameter/t35 = Color(0, 0, 0, 1)
shader_parameter/t36 = Color(0, 0, 0, 1)
shader_parameter/t37 = Color(0, 0, 0, 1)
shader_parameter/t38 = Color(0, 0, 0, 1)
shader_parameter/t39 = Color(0, 0, 0, 1)
shader_parameter/t40 = Color(0, 0, 0, 1)
shader_parameter/t41 = Color(0, 0, 0, 1)
shader_parameter/t42 = Color(0, 0, 0, 1)
shader_parameter/t43 = Color(0, 0, 0, 1)
shader_parameter/t44 = Color(0, 0, 0, 1)
shader_parameter/t45 = Color(0, 0, 0, 1)
shader_parameter/t46 = Color(0, 0, 0, 1)
shader_parameter/t47 = Color(0, 0, 0, 1)
shader_parameter/t48 = Color(0, 0, 0, 1)
shader_parameter/t49 = Color(0, 0, 0, 1)
shader_parameter/t50 = Color(0, 0, 0, 1)
shader_parameter/t51 = Color(0, 0, 0, 1)
shader_parameter/t52 = Color(0, 0, 0, 1)
shader_parameter/t53 = Color(0, 0, 0, 1)
shader_parameter/t54 = Color(0, 0, 0, 1)
shader_parameter/t55 = Color(0, 0, 0, 1)
shader_parameter/t56 = Color(0, 0, 0, 1)
shader_parameter/t57 = Color(0, 0, 0, 1)
shader_parameter/t58 = Color(0, 0, 0, 1)
shader_parameter/t59 = Color(0, 0, 0, 1)
shader_parameter/t60 = Color(0, 0, 0, 1)
shader_parameter/t61 = Color(0, 0, 0, 1)
shader_parameter/t62 = Color(0, 0, 0, 1)
shader_parameter/t63 = Color(0, 0, 0, 1)
shader_parameter/t64 = Color(0, 0, 0, 1)
shader_parameter/t65 = Color(0, 0, 0, 1)
shader_parameter/t66 = Color(0, 0, 0, 1)
shader_parameter/t67 = Color(0, 0, 0, 1)
shader_parameter/t68 = Color(0, 0, 0, 1)
shader_parameter/t69 = Color(0, 0, 0, 1)
shader_parameter/t70 = Color(0, 0, 0, 1)
shader_parameter/t71 = Color(0, 0, 0, 1)
shader_parameter/t72 = Color(0, 0, 0, 1)
shader_parameter/t73 = Color(0, 0, 0, 1)
shader_parameter/t74 = Color(0, 0, 0, 1)
shader_parameter/t75 = Color(0, 0, 0, 1)
shader_parameter/t76 = Color(0, 0, 0, 1)
shader_parameter/t77 = Color(0, 0, 0, 1)
shader_parameter/t78 = Color(0, 0, 0, 1)
shader_parameter/t79 = Color(0, 0, 0, 1)
shader_parameter/t80 = Color(0, 0, 0, 1)
shader_parameter/t81 = Color(0, 0, 0, 1)
shader_parameter/t82 = Color(0, 0, 0, 1)
shader_parameter/t83 = Color(0, 0, 0, 1)
shader_parameter/t84 = Color(0, 0, 0, 1)
shader_parameter/t85 = Color(0, 0, 0, 1)
shader_parameter/t86 = Color(0, 0, 0, 1)
shader_parameter/t87 = Color(0, 0, 0, 1)
shader_parameter/t88 = Color(0, 0, 0, 1)
shader_parameter/t89 = Color(0, 0, 0, 1)
shader_parameter/t90 = Color(0, 0, 0, 1)
shader_parameter/t91 = Color(0, 0, 0, 1)
shader_parameter/t92 = Color(0, 0, 0, 1)
shader_parameter/t93 = Color(0, 0, 0, 1)
shader_parameter/t94 = Color(0, 0, 0, 1)
shader_parameter/t95 = Color(0, 0, 0, 1)
shader_parameter/t96 = Color(0, 0, 0, 1)
shader_parameter/t97 = Color(0, 0, 0, 1)
shader_parameter/t98 = Color(0, 0, 0, 1)
shader_parameter/t99 = Color(0, 0, 0, 1)
shader_parameter/t100 = Color(0, 0, 0, 1)
shader_parameter/t101 = Color(0, 0, 0, 1)
shader_parameter/t102 = Color(0, 0, 0, 1)
shader_parameter/t103 = Color(0, 0, 0, 1)
shader_parameter/t104 = Color(0, 0, 0, 1)
shader_parameter/t105 = Color(0, 0, 0, 1)
shader_parameter/t106 = Color(0, 0, 0, 1)
shader_parameter/t107 = Color(0, 0, 0, 1)
shader_parameter/t108 = Color(0, 0, 0, 1)
shader_parameter/t109 = Color(0, 0, 0, 1)
shader_parameter/t110 = Color(0, 0, 0, 1)
shader_parameter/t111 = Color(0, 0, 0, 1)
shader_parameter/t112 = Color(0, 0, 0, 1)
shader_parameter/t113 = Color(0, 0, 0, 1)
shader_parameter/t114 = Color(0, 0, 0, 1)
shader_parameter/t115 = Color(0, 0, 0, 1)
shader_parameter/t116 = Color(0, 0, 0, 1)
shader_parameter/t117 = Color(0, 0, 0, 1)
shader_parameter/t118 = Color(0, 0, 0, 1)
shader_parameter/t119 = Color(0, 0, 0, 1)
shader_parameter/t120 = Color(0, 0, 0, 1)
shader_parameter/t121 = Color(0, 0, 0, 1)
shader_parameter/t122 = Color(0, 0, 0, 1)
shader_parameter/t123 = Color(0, 0, 0, 1)
shader_parameter/t124 = Color(0, 0, 0, 1)
shader_parameter/t125 = Color(0, 0, 0, 1)
shader_parameter/t126 = Color(0, 0, 0, 1)
shader_parameter/t127 = Color(0, 0, 0, 1)
shader_parameter/t128 = Color(0, 0, 0, 1)
shader_parameter/t129 = Color(0, 0, 0, 1)
shader_parameter/t130 = Color(0, 0, 0, 1)
shader_parameter/t131 = Color(0, 0, 0, 1)
shader_parameter/t132 = Color(0, 0, 0, 1)
shader_parameter/t133 = Color(0, 0, 0, 1)
shader_parameter/t134 = Color(0, 0, 0, 1)
shader_parameter/t135 = Color(0, 0, 0, 1)
shader_parameter/t136 = Color(0, 0, 0, 1)
shader_parameter/t137 = Color(0, 0, 0, 1)
shader_parameter/t138 = Color(0, 0, 0, 1)
shader_parameter/t139 = Color(0, 0, 0, 1)
shader_parameter/t140 = Color(0, 0, 0, 1)
shader_parameter/t141 = Color(0, 0, 0, 1)
shader_parameter/t142 = Color(0, 0, 0, 1)
shader_parameter/t143 = Color(0, 0, 0, 1)
shader_parameter/t144 = Color(0, 0, 0, 1)
shader_parameter/t145 = Color(0, 0, 0, 1)
shader_parameter/t146 = Color(0, 0, 0, 1)
shader_parameter/t147 = Color(0, 0, 0, 1)
shader_parameter/t148 = Color(0, 0, 0, 1)
shader_parameter/t149 = Color(0, 0, 0, 1)
shader_parameter/t150 = Color(0, 0, 0, 1)
shader_parameter/t151 = Color(0, 0, 0, 1)
shader_parameter/t152 = Color(0, 0, 0, 1)
shader_parameter/t153 = Color(0, 0, 0, 1)
shader_parameter/t154 = Color(0, 0, 0, 1)
shader_parameter/t155 = Color(0, 0, 0, 1)
shader_parameter/t156 = Color(0, 0, 0, 1)
shader_parameter/t157 = Color(0, 0, 0, 1)
shader_parameter/t158 = Color(0, 0, 0, 1)
shader_parameter/t159 = Color(0, 0, 0, 1)
shader_parameter/t160 = Color(0, 0, 0, 1)
shader_parameter/t161 = Color(0, 0, 0, 1)
shader_parameter/t162 = Color(0, 0, 0, 1)
shader_parameter/t163 = Color(0, 0, 0, 1)
shader_parameter/t164 = Color(0, 0, 0, 1)
shader_parameter/t165 = Color(0, 0, 0, 1)
shader_parameter/t166 = Color(0, 0, 0, 1)
shader_parameter/t167 = Color(0, 0, 0, 1)
shader_parameter/t168 = Color(0, 0, 0, 1)
shader_parameter/t169 = Color(0, 0, 0, 1)
shader_parameter/t170 = Color(0, 0, 0, 1)
shader_parameter/t171 = Color(0, 0, 0, 1)
shader_parameter/t172 = Color(0, 0, 0, 1)
shader_parameter/t173 = Color(0, 0, 0, 1)
shader_parameter/t174 = Color(0, 0, 0, 1)
shader_parameter/t175 = Color(0, 0, 0, 1)
shader_parameter/t176 = Color(0, 0, 0, 1)
shader_parameter/t177 = Color(0, 0, 0, 1)
shader_parameter/t178 = Color(0, 0, 0, 1)
shader_parameter/t179 = Color(0, 0, 0, 1)
shader_parameter/t180 = Color(0, 0, 0, 1)
shader_parameter/t181 = Color(0, 0, 0, 1)
shader_parameter/t182 = Color(0, 0, 0, 1)
shader_parameter/t183 = Color(0, 0, 0, 1)
shader_parameter/t184 = Color(0, 0, 0, 1)
shader_parameter/t185 = Color(0, 0, 0, 1)
shader_parameter/t186 = Color(0, 0, 0, 1)
shader_parameter/t187 = Color(0, 0, 0, 1)
shader_parameter/t188 = Color(0, 0, 0, 1)
shader_parameter/t189 = Color(0, 0, 0, 1)
shader_parameter/t190 = Color(0, 0, 0, 1)
shader_parameter/t191 = Color(0, 0, 0, 1)
shader_parameter/t192 = Color(0, 0, 0, 1)
shader_parameter/t193 = Color(0, 0, 0, 1)
shader_parameter/t194 = Color(0, 0, 0, 1)
shader_parameter/t195 = Color(0, 0, 0, 1)
shader_parameter/t196 = Color(0, 0, 0, 1)
shader_parameter/t197 = Color(0, 0, 0, 1)
shader_parameter/t198 = Color(0, 0, 0, 1)
shader_parameter/t199 = Color(0, 0, 0, 1)
shader_parameter/t200 = Color(0, 0, 0, 1)
shader_parameter/t201 = Color(0, 0, 0, 1)
shader_parameter/t202 = Color(0, 0, 0, 1)
shader_parameter/t203 = Color(0, 0, 0, 1)
shader_parameter/t204 = Color(0, 0, 0, 1)
shader_parameter/t205 = Color(0, 0, 0, 1)
shader_parameter/t206 = Color(0, 0, 0, 1)
shader_parameter/t207 = Color(0, 0, 0, 1)
shader_parameter/t208 = Color(0, 0, 0, 1)
shader_parameter/t209 = Color(0, 0, 0, 1)
shader_parameter/t210 = Color(0, 0, 0, 1)
shader_parameter/t211 = Color(0, 0, 0, 1)
shader_parameter/t212 = Color(0, 0, 0, 1)
shader_parameter/t213 = Color(0, 0, 0, 1)
shader_parameter/t214 = Color(0, 0, 0, 1)
shader_parameter/t215 = Color(0, 0, 0, 1)
shader_parameter/t216 = Color(0, 0, 0, 1)
shader_parameter/t217 = Color(0, 0, 0, 1)
shader_parameter/t218 = Color(0, 0, 0, 1)
shader_parameter/t219 = Color(0, 0, 0, 1)
shader_parameter/t220 = Color(0, 0, 0, 1)
shader_parameter/t221 = Color(0, 0, 0, 1)
shader_parameter/t222 = Color(0, 0, 0, 1)
shader_parameter/t223 = Color(0, 0, 0, 1)
shader_parameter/t224 = Color(0, 0, 0, 1)
shader_parameter/t225 = Color(0, 0, 0, 1)
shader_parameter/t226 = Color(0, 0, 0, 1)
shader_parameter/t227 = Color(0, 0, 0, 1)
shader_parameter/t228 = Color(0, 0, 0, 1)
shader_parameter/t229 = Color(0, 0, 0, 1)
shader_parameter/t230 = Color(0, 0, 0, 1)
shader_parameter/t231 = Color(0, 0, 0, 1)
shader_parameter/t232 = Color(0, 0, 0, 1)
shader_parameter/t233 = Color(0, 0, 0, 1)
shader_parameter/t234 = Color(0, 0, 0, 1)
shader_parameter/t235 = Color(0, 0, 0, 1)
shader_parameter/t236 = Color(0, 0, 0, 1)
shader_parameter/t237 = Color(0, 0, 0, 1)
shader_parameter/t238 = Color(0, 0, 0, 1)
shader_parameter/t239 = Color(0, 0, 0, 1)
shader_parameter/t240 = Color(0, 0, 0, 1)
shader_parameter/t241 = Color(0, 0, 0, 1)
shader_parameter/t242 = Color(0, 0, 0, 1)
shader_parameter/t243 = Color(0, 0, 0, 1)
shader_parameter/t244 = Color(0, 0, 0, 1)
shader_parameter/t245 = Color(0, 0, 0, 1)
shader_parameter/t246 = Color(0, 0, 0, 1)
shader_parameter/t247 = Color(0, 0, 0, 1)
shader_parameter/t248 = Color(0, 0, 0, 1)
shader_parameter/t249 = Color(0, 0, 0, 1)
shader_parameter/t250 = Color(0, 0, 0, 1)
shader_parameter/t251 = Color(0, 0, 0, 1)
shader_parameter/t252 = Color(0, 0, 0, 1)
shader_parameter/t253 = Color(0, 0, 0, 1)
shader_parameter/t254 = Color(0, 0, 0, 1)
shader_parameter/t255 = Color(0, 0, 0, 1)
shader_parameter/t256 = Color(0, 0, 0, 1)

[node name="Main" type="Control"]
texture_filter = 2
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1uxqu")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="ReferenceRect" type="ReferenceRect" parent="MarginContainer"]
layout_mode = 2
mouse_filter = 2

[node name="DisplayTexture" type="TextureRect" parent="MarginContainer"]
unique_name_in_owner = true
texture_filter = 1
layout_mode = 2
texture = SubResource("ViewportTexture_d02yq")
expand_mode = 1
stretch_mode = 4

[node name="VFlowContainer" type="VFlowContainer" parent="MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8

[node name="ColorPair" parent="MarginContainer/VFlowContainer" instance=ExtResource("4_jki75")]
layout_mode = 2

[node name="SubViewport" type="SubViewport" parent="."]
unique_name_in_owner = true
transparent_bg = true
size = Vector2i(8, 8)

[node name="SourceTexture" type="TextureRect" parent="SubViewport"]
unique_name_in_owner = true
texture_filter = 2
material = SubResource("ShaderMaterial_jgx0j")
offset_right = 8.0
offset_bottom = 8.0

[node name="FileDialog" type="FileDialog" parent="."]
unique_name_in_owner = true
title = "Open a File"
initial_position = 4
size = Vector2i(608, 159)
always_on_top = true
content_scale_mode = 2
ok_button_text = "Open"
dialog_hide_on_ok = true
file_mode = 0
access = 2
show_hidden_files = false
use_native_dialog = true

[node name="MenuBar" type="MenuBar" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2

[node name="File" type="PopupMenu" parent="MenuBar"]
unique_name_in_owner = true
